# gfx-pg

./: .gitignore  Cargo.toml
assets/: map
client/: Cargo.toml
client/src/: grid.rs  gui_sys.rs  info_layer.rs  input_sys.rs  lib.rs  main.rs  map.rs  maths.rs  systems.rs
client/src/arrowdrop/: mod.rs
client/src/flowchart/: mod.rs
client/src/generatin/: crimes  mod.rs
entrypoint/: Cargo.toml
entrypoint-wasm/: Cargo.toml
entrypoint-wasm/src/: lib.rs
entrypoint/src/: main.rs
rx/: Cargo.toml  build.rs
rx/src/: assets.rs  ecs.rs  events.rs  graphics_api.rs  gui.rs  lib.rs  local.rs  maths.rs  render.rs  render_w.rs  run.rs  shader.rs  utils.rs  window.rs
rx/src/ecs/: base_systems.rs  layer.rs  mod.rs
rx/src/ecs/systems/: frustum.rs
rx/src/graphics/: api.rs  hal_utils.rs  memory.rs  mod.rs  pipelines.rs  state.rs  swapchain.rs  wrapper.rs
rx/src/utils/: mod.rs
rx/src/wgpu_graphics/: memory.rs  mod.rs  pipeline.rs  pipeline_test.rs  texture.rs
shaders/: grid.frag  grid.vert  one.frag  one.vert
src/: api.rs  main.rs  utils.rs  window.rs
src/graphics/: api.rs  mod.rs  pipelines.rs
