[package]
name = "client"
version = "0.1.0"
authors = ["theopus <theopus5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vulkan = ["rx", "rx/vulkan"]
gl = ["rx", "rx/gl"]
wgl = ["rx", "rx/wgl"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.0"

[dependencies.rx]
path="../rx"
optional=true
default-features=false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"