[package]
name = "client"
version = "0.1.0"
authors = ["theopus <theopus5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rx", "rx/vulkan"]
vulkan = ["rx", "rx/vulkan"]
gl = ["rx", "rx/gl"]
wgl = ["rx", "rx/wgl"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.0"
serde_json = "1.0"
rx = { path = "../rx", default-features = false }
rand = "0.8.3"
rand_seeder = "0.2.2"
rand_pcg = "0.3.0"
rand_distr = "0.4.0"
itertools = "0.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rx]
path = "../rx"
optional = true

#[target.'cfg(target_arch = "wasm32")'.dependencies.rx]
#path="../rx"
#features=["wgl"]
