[package]
name = "entrypoint-wasm"
version = "0.1.0"
authors = ["theopus <theopus5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
client = { path = "../client", features = ["wgl"] }
wasm-bindgen = "0.2.55"
