[package]
name = "entrypoint"
version = "0.1.0"
authors = ["theopus <theopus5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "../rx/build.rs"


[dependencies]
client = { path = "../client", features = [] }

#TODO temp stuf for shaders
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
