[package]
name = "rx"
version = "0.1.0"
authors = ["theopus <theopus5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
winit = { version = "0.24.0", features = ["web-sys"] }
log = "0.4.0"
arrayvec = "0.4"
image = "0.22.4"
tobj = "0.1.8"
nalgebra = "0.18.0"
nalgebra-glm = "0.4.0"
specs = { version = "0.16", features = ["specs-derive"] }
specs-derive = "0.4"
itertools = "0.8.0"
wgpu = "0.7"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }

#egui
#egui = "0.11.0"
#egui_wgpu_backend = "0.7.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = ["console", "Document", "Element", "HtmlElement", "Node", "Window"]